--- a/index.html
+++ b/index.html
@@ -31,49 +31,49 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row">
-        <div class="col-1 hour"  data-hour="9">9AM</div>
-        <input class="col-10 memo" id="9" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour"  >9AM</div>
+        <input class="col-10 memo" id="9" data-hour="9" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="9">💾</button>
       </div>
       <div class="row">
-        <div class="col-1 hour" data-hour="10">10AM</div>
-        <input class="col-10 memo" id="10" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour" >10AM</div>
+        <input class="col-10 memo" id="10" data-hour="10" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="10">💾</button>
       </div>
       <div class="row">
-        <div class="col-1 hour" data-hour="11">11AM</div>
-        <input class="col-10 memo" id="11" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour" >11AM</div>
+        <input class="col-10 memo" id="11" data-hour="11" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="11">💾</button>
       </div>
       <div class="row">
-        <div class="col-1 hour" data-hour="12">12PM</div>
-        <input class="col-10 memo" id="12" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour" >12PM</div>
+        <input class="col-10 memo" id="12" data-hour="12" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="12">💾</button>
       </div>
       <div class="row">
-        <div class="col-1 hour" data-hour="13">1PM</div>
-        <input class="col-10 memo" id="1" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour" >1PM</div>
+        <input class="col-10 memo" id="1" data-hour="13" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="1">💾</button>
       </div>
      
       <div class="row">
-        <div class="col-1 hour" data-hour="14">2PM</div>
-        <input class="col-10 memo" id="2" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour" >2PM</div>
+        <input class="col-10 memo" id="2" data-hour="14" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="2">💾</button>
       </div>
       <div class="row">
-        <div class="col-1 hour" data-hour="15">3PM</div>
-        <input class="col-10 memo" id="3" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour" >3PM</div>
+        <input class="col-10 memo" id="3" data-hour="15" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="3">💾</button>
       </div>
       <div class="row">
-        <div class="col-1 hour" data-hour="16">4PM</div>
-        <input class="col-10 memo" id="4" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour" >4PM</div>
+        <input class="col-10 memo" id="4" data-hour="16" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="4">💾</button>
       </div>
       <div class="row">
-        <div class="col-1 hour" data-hour="17">5PM</div>
-        <input class="col-10 memo" id="5" type="text" style="border:none; outline: 0"></input>
+        <div class="col-1 hour" >5PM</div>
+        <input class="col-10 memo" id="5" data-hour="17" type="text" style="border:none; outline: 0"></input>
         <button class="col-1 saveBtn" id="5">💾</button>
       </div>
      
